# 0xwatcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASING.md  config.example.yaml  config.yaml.example  docker-compose.yml
.github/workflows/: docker.yml  release.yml
src/: config.rs  lib.rs  logger.rs  main.rs  storage.rs  telegram.rs
src/contracts/: erc20.rs  mod.rs
src/monitoring/: balance.rs  mod.rs
src/providers/: fallback.rs  mod.rs
tests/: balance_changes_test.rs
