[package]
name = "Oxwatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0", features = ["full", "node-bindings", "provider-http"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_with = "3.9"
teloxide = { version = "0.17", features = ["macros"] }
reqwest = "0.12"
chrono = "0.4"

[dev-dependencies]
alloy = { version = "1.0", features = ["full", "node-bindings", "provider-http"] }
tokio-test = "0.4"
